Navbar responsiveness, Some Alignments fixes, navar links

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,7 @@ body {
     transform: translateY(0) !important;
   }
 }
+
+html {
+  scroll-behavior: smooth;
+}
